Don't return installed apps in webstore searches in Launcher

BUG=592168
TEST=Open Launcher, search for and install Sudoku app, launch it.
Reopen Launcher, observer that app icon on Start Page looks right.

In the Launcher search, webstore app results used the same internal id
as installed apps.  Sometimes the wrong time of result object would get
cached in the Mixer, and a webstore result (smaller icon, no context
menu) would end up on the Start Page.

This CL changes internal id scheme for webstore app results, and
explicitly removes installed apps from results returned by webstore
provider.

Review-Url: https://codereview.chromium.org/1936953002
Cr-Commit-Position: refs/heads/master@{#391791}

Former-commit-id: bcf7574721f7393dd33469fe476999ab50a35075